part-2-kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-api-ingress
  namespace: titanic-api
  labels:
    app: titanic-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - titanic-api.iyere.site
    secretName: titanic-api-tls
  rules:
  - host: titanic-api.iyere.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titanic-api
            port:
              number: 80
      - path: /health
        pathType: Exact
        backend:
          service:
            name: titanic-api
            port:
              number: 80
      - path: /people
        pathType: Prefix
        backend:
          service:
            name: titanic-api
            port:
              number: 80
